Fix too long user website URL issue

--- a/assets/css/pages/userPage/profileInfos.css
+++ b/assets/css/pages/userPage/profileInfos.css
@@ -10,3 +10,7 @@
 	font-size: 90%;
 	margin-bottom: 10px;
 }
+
+.about-user-box {
+	word-break: break-all;
+}
